3-ns/jellyfin/ingress-peluan.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ing-peluan
  namespace: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cf
spec:
  ingressClassName: public
  rules:
  - host: jellyfin.peluan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 8096
  tls:
  - hosts:
    - jellyfin.peluan.com
    secretName: jellyfin-tls
